# Spoleto_Wedding_Aget

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  plan-spoletoWeddingAget.prompt.md  project-onboarding-checklist.txt  pyproject.toml
.github/workflows/: ci.yml
data/manual_knowledge/: המלצות במזור.json  המלצות לעיר.json  לוז.json  לינה.json  מידע על המלון.json  רשימת חדרים.json  תפריט.json
data/permanent/: README.md
data/processed/: README.md  לוז A5.json  מפה אומבריה עם תיאורים.json  מפה ספולטו עם תיאורים.json
data/raw/images/: README.md
data/trips/spoleto-2026/raw/png/: README.md
docs/specification/: deployment-baseline.md  engineering-overview.md  testing-strategy.md
openclaw/: openclaw.json5
openclaw/includes/: agents.json5  channels.whatsapp.json5  hooks.json5  tools.json5
prompts/base/: itinerary_rules.md  personality.md  response_style.md  safety.md  system.md  trip_context.md
services/ingestion/: README.md
services/ingestion/examples/: manifest.sample.json
services/ingestion/spoleto_ingestion/: __init__.py  cli.py  manifest.py  normalization.py  prompt_assembly.py  providers.py  schemas.py  startup_validation.py
services/ingestion/spoleto_wedding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_automation_files.py  test_ingestion_manifest.py  test_normalization_validation.py  test_openclaw_config.py  test_packaging_files.py  test_scaffold.py
workspace/: AGENTS.md  MEMORY.md  SOUL.md  TOOLS.md  system_prompt.md
